--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -15,4 +15,7 @@ jobs:
           pip install -r requirements.txt
           python model.py
           
+          echo "## Model Metrics" > report.md
+          cat metrics.txt >> report.md
           
+          echo "\n## Model Performance" >> report.md
