--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -19,3 +19,9 @@ jobs:
           cat metrics.txt >> report.md
           
           echo "\n## Model Performance" >> report.md
+          echo "Model performance metrics are on the plot below." >> report.md
+          
+          cml-publish model_results.png --md >> report.md
+          
+          cml-send-comment report.md
+          
