--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -18,8 +18,8 @@ jobs:
           echo "## Model Metrics" > report.md
           cat metrics.txt >> report.md
           
-          echo "\n## Model Performance" >> report.md
-          echo "Model performance metrics are on the plot below." >> report.md
+          #echo "\n## Model Performance" >> report.md
+          #echo "Model performance metrics are on the plot below." >> report.md
           
           
           
