--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -15,13 +15,10 @@ jobs:
           pip install -r requirements.txt
           python model.py
           
-          echo "## Model Metrics" > report.md
+      - name: Write CML report
+        env:
+          REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          # Post reports as comments in GitHub PRs
           cat metrics.txt >> report.md
-          
-          echo "\n## Model Performance" >> report.md
-          #echo "Model performance metrics are on the plot below." >> report.md
-          
-          
-          
-          cml-send-comment 
-          
+          cml comment create report.md
