--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -21,4 +21,4 @@ jobs:
         run: |
           # Post reports as comments in GitHub PRs
           cat metrics.txt >> report.md
-          cml comment create report.md
+          cml-send-comment report.md
