--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -20,6 +20,14 @@ jobs:
           REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           # Post reports as comments in GitHub PRs
+          #cat metrics.txt >> report.md
+          
+          echo "## Model Metrics" > report.md
           cat metrics.txt >> report.md
-          cml send-comment --pr=123
-          #cml-send-comment report.md
+          
+          echo "\n## Model Performance" >> report.md
+          echo "Model performance metrics are on the plot below." >> report.md
+          
+          cml-publish model_results.png --md >> report.md
+          
+          cml-send-comment report.md
