--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -26,8 +26,8 @@ jobs:
           cat metrics.txt >> report.md
           
           echo "\n## Model Performance" >> report.md
-          echo "Model performance metrics are on the plot below." >> report.md
+          #echo "Model performance metrics are on the plot below." >> report.md
           
-          cml-publish model_results.png --md >> report.md
+          #cml-publish model_results.png --md >> report.md
           
           cml-send-comment report.md
