--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -27,7 +27,8 @@ jobs:
           
           echo "\n## Model Performance" >> report.md
           echo "Model performance metrics are on the plot below." >> report.md
-          cml-publish ./'model_results.png' --md >> report.md
+          echo "![](./model_results.png)" >> report.md
+          #cml-publish ./'model_results.png' --md >> report.md
           
                    
           cml-send-comment report.md
