--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -28,7 +28,7 @@ jobs:
           echo "\n## Model Performance" >> report.md
           echo "Model performance metrics are on the plot below." >> report.md
           #echo "![](./model_results.png)" >> report.md
-          cml-publish ./model_results.png >> report.md
+          cml publish ./model_results.png --md >> report.md
           #cat model_results.png >> report.md
           
                    
